# nesla

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  apu.c  apu.h  cart.c  cart.h  common.h  cpu.c  cpu.h  interrupt.c  interrupt.h  mapper.c  mapper.h  mmu.c  mmu.h  nes.h  ppu.c  ppu.h
desktop/: CMakeLists.txt  main.c  main.cpp  render.cpp  render.h  utils.cpp  utils.h
include/: common.h  cpu.h  mmu.h  nes.h
src/: CMakeLists.txt  cpu.c  mmu.c
test/: CMakeLists.txt  README.md  cpu_test.c  cpu_test.sh
